src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/MethodWithNotMatchingParameterType.t.cs
// Error LAMA5103 on `Invalidate`: `The [InvalidateCache] aspect applied to 'MethodWithNotMatchingParameterType.InvalidatingClass.Invalidate(CachedValueClass)' cannot invalidate 'MethodWithNotMatchingParameterType.CachingClass.DoAction(CachedValueChildClass)': the type of the 'param' parameter of the cached method is not compatible with the type of the 'param' parameter in the invalidating method.`